--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,7 @@ html, body {
 .site-main {
     position: relative;
     margin-bottom: 100px;
-    background-color: #fff;
+    background-color: #eee;
     z-index: 1;
 }
 /* site-section */
