--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ html, body {
 .navbar-nav > li > a {
     padding: 5px 0;
     font-weight: 600;
-    color: #212121;
+    color: #fff;
     text-transform: uppercase;
     border-bottom: 2px solid transparent;
     transition: border-color 0.25s ease-in-out;
