--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,13 @@ html, body {
 }
 
 .main-name {
-    -webkit-text-stroke: 1.25px #eee;
+    -webkit-text-stroke: 1.25px #fefefe;
+}
+
+.ghoozie-text-bg {
+    padding: 12px;
+    background-color: #fefefe;
+    border: 3px solid #212121;
 }
 
 .job-title {
