more mobile css test

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,9 +594,16 @@ a.icon-up-bg:hover {color: #212121;}
     text-align: center;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 900px) {
   /* For mobile phones: */
-  [class*="col-"] {
+  [class*="col-md-6"] {
     width: 50%;
+  }
+
+  .hero .col-md-6:last-child {
+      position: absolute;
+      top: 55%;
+      right: 50%;
+      bottom: 0;
   }
 }
