--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,9 +266,9 @@ html, body {
     text-shadow: -1px 0 #eee, 0 1px #eee, 1px 0 #eee, 0 -1px #eee;
 } 
 
-/*.hero img {
+.hero img {
     height: 600px;
-}*/
+}
 
 /* SITEMAIN
 ================================================== */
