--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,7 +235,8 @@ html, body {
 }
 
 .hero .col-md-6:last-child {
-    position: absolute;
+    position: fixed;
+    top: 20%;
     right: 0;
     bottom: 0;
 }
