--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,8 +235,7 @@ html, body {
 }
 
 .hero .col-md-6:last-child {
-    position: fixed;
-    top: 20%;
+    position: absolute;
     right: 0;
     bottom: 0;
 }
