--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,4 +594,15 @@ a.icon-up-bg:hover {color: #212121;}
     text-align: center;
 }
 
+.front-pic {
+    margin-right:auto;
+    margin-left:auto;
+}
+
+@media only screen and (max-width: 900px) {
+  .front-pic {
+    position: relative;
+    top: 50%;
+  }
+}
 
