split react added thruway
need to figure out imports with babel, maybe webpack?

--- a/react/index.css
+++ b/react/index.css
@@ -3,13 +3,13 @@
     src: url(https://github.com/dejavu-fonts/dejavu-fonts);
 }
 
-body {
+/* body {
     background-color: black;
 }
 
 h1, h2, h3, h4, h5, h6 {
     color:#0D0;
-}
+} */
 
 .header-container {
     font-family: DejaVu Sans Mono;
